# API/openapi-appengine.yaml
@@ -53,6 +53,29 @@ paths:
           $ref: "#/definitions/echoMessage"
       security:
       - api_key: []
+
+  "/ret":
+    post:
+      description: "Return back a given message 2."
+      operationId: "ret"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "Return"
+          schema:
+            $ref: "#/definitions/echoMessage"
+      parameters:
+      - description: "Message to Return"
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: "#/definitions/echoMessage"
+      security:
+      - api_key: []
+
+
   "/auth/info/googlejwt":
     get:
       description: "Returns the requests' authentication information."
@@ -110,20 +133,3 @@ securityDefinitions:
   # This section configures authentication using Google API Service Accounts
   # to sign a json web token. This is mostly used for server-to-server
   # communication.
-  google_jwt:
-    authorizationUrl: ""
-    flow: "implicit"
-    type: "oauth2"
-    # This must match the 'iss' field in the JWT.
-    x-google-issuer: "jwt-client.endpoints.sample.google.com"
-    # Update this with your service account's email address.
-    x-google-jwks_uri: "https://www.googleapis.com/service_accounts/v1/jwk/YOUR-SERVICE-ACCOUNT-EMAIL"
-  # This section configures authentication using Google OAuth2 ID Tokens.
-  # ID Tokens can be obtained using OAuth2 clients, and can be used to access
-  # your API on behalf of a particular user.
-  google_id_token:
-    authorizationUrl: ""
-    flow: "implicit"
-    type: "oauth2"
-    x-google-issuer: "https://accounts.google.com"
-    x-google-jwks_uri: "https://www.googleapis.com/oauth2/v1/certs"
