# API/src/IO.Swagger/Controllers/DefaultApi.cs
@@ -106,6 +106,23 @@ namespace IO.Swagger.Controllers
         }
 
         /// <summary>
+        ///
+        /// </summary>
+        /// <remarks>Echo back a given message.</remarks>
+        /// <param name="message">Message to echo</param>
+        /// <response code="200">Echo</response>
+        [HttpPost]
+        [Route("/ret")]
+        [SwaggerOperation("Return")]
+        [SwaggerResponse(200, type: typeof(EchoMessage))]
+        public virtual IActionResult Return([FromBody]EchoMessage message)
+        {
+            //append a message to the message "echoed" back
+            message = new EchoMessage(message.Message + " (Returned)");
+            return new ObjectResult(message);
+        }
+
+        /// <summary>
         /// GET API for the health checks
         /// </summary>
         /// <returns>200 if health check has passed</returns>
